--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -79,11 +79,16 @@ body.devise__sessions__new,body.devise__registrations__new,body.devise__registra
 }
 
 body.home__index, body.teachers__index{
+	.main-content {
+		 overflow: hidden;
+	}
 	section.common-title {
 		height: 60px;
 		line-height: 60px;
 		padding: 0 16px 0 60px;
 		margin-top: 20px;
+		display: block;
+		overflow: hidden;
 		background: image-url('title-bg.png') no-repeat 8px 15px;
 		span.pull-left {
 			font-size: 24px;
@@ -100,6 +105,141 @@ body.home__index, body.teachers__index{
 				background: image-url('more.png') no-repeat center right;
 			}
 		}
+	}
+	.tips-bg {
+		width: 100%;
+		height: 275px;
+		margin-top: 48px;
+		background: image-url("tips-bg.png") no-repeat 0 0;
+	}
+	.panel-bg {
+		font-size: 18px;
+		color: #fff;
+		background: #9abce1;
+	}
+	.star-course {
+		width: 100%;
+		height: 300px;
+		font-size: 16px;
+		color: #373737;
+		background: image-url("star-course-bg.png") no-repeat 0 0;
+		background-size: 100% 100%;
+	}
+	.course-center {
+		height: 230px;
+		text-align: center;
+		overflow: hidden;
+		img {
+			display: block;
+			margin: 30px auto 20px auto;
+		}
+	}
+	.border-yellow {
+    border: solid 1px #ebc542;
+	}
+	.border-blue {
+    border: solid 1px #6ea5e1;
+	}
+	.border-red {
+    border: solid 1px #d04343;
+	}
+	.border-green {
+    border: solid 1px #30d27c;
+	}
+
+	.large {
+		position: relative;
+		float: left;
+	}
+	.mask {
+		height: 220px;
+		width: 100%;
+		line-height: 220px;
+	  text-align: center;
+	  font-size: 20px;
+	  color: #fff;
+		opacity: 0.7;
+		background: #000;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		display: none;
+	}
+	.little {
+		position: relative;
+		img {
+			opacity: 0.3;
+		}
+		&:hover {
+			img {
+				opacity: 1;
+			}
+		}
+	}
+	.sm-mask {
+		height: 110px;
+		width: 100%;
+		line-height: 110px;
+	  text-align: center;
+	  color: #fff;
+		opacity: 0.7;
+		background: #000;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		display: none;
+	}
+	.small-div, .pre-div {
+    h3, span {
+			color: #fff;
+			height: 100%;
+			line-height: 100%;
+		}
+	}
+	.small-div {
+		width: 20%;
+		height: 220px;
+		background: #000;
+		opacity: 0.7;
+		float: left;
+		overflow: hidden;
+	}
+	.pre-div {
+		height: 220px;
+		padding: 10px;
+		background: #000;
+		opacity: 0.7;
+		display: none;
+		overflow: hidden;
+		span {
+			font-size: 14px;
+			margin-left: 5px;
+		}
+	}
+	.star-course {
+		a img {
+			width: 100%;
+			height: 160px;
+			padding: 12px 0;
+			border: 0 none;
+		}
+    .description {
+			height: 26px;
+			line-height: 26px;
+			overflow: hidden;
+			label {
+				font-size: normal;
+			}
+			a {
+				color: #5d5d5d;
+			}
+		}
+	}
+	.margin-tb {
+		margin-top: 60px;
+		margin-bottom: 40px;
 	}
 }
 /*网站首页*/
