--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -95,6 +95,9 @@ body.courses__index {
             color: #5d5d5d;
           }
         }
+        .glyphicon-star {
+          color: orange;
+        }
       }
     }
     
