--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,9 +14,9 @@
         </div>
         <div class="col-sm-11">
           <ul class="nav nav-pills serach-course">
-            <li class="active"><a href="#">全部</a></li>
+            <li param="" class="active"><a href="#">全部</a></li>
             <% @academies.each_with_index do |academy, index| %>
-              <li><%= link_to academy.name, "#" %></li>
+              <li param="<%= academy.id %>"><%= link_to academy.name, "#" %></li>
             <% end %>
           </ul>
         </div>
@@ -30,9 +30,9 @@
         </div>
         <div class="col-sm-11">
           <ul class="nav nav-pills serach-course">
-            <li class="active"><a href="#">全部</a></li>
-            <li><a href="#">市级</a></li>
-            <li><a href="#">校级</a></li>
+            <li param="" class="active"><a href="#">全部</a></li>
+            <li param="2" ><a href="#">市级</a></li>
+            <li param="1"><a href="#">校级</a></li>
           </ul>
         </div>
       </div>
@@ -45,9 +45,9 @@
         </div>
         <div class="col-sm-11">
           <ul class="nav nav-pills serach-course">
-            <li class="active"><a href="#">全部</a></li>
-            <li><a href="#">最新</a></li>
-            <li><a href="#">最热</a></li>
+            <li param="" class="active"><a href="#">全部</a></li>
+            <li param="new"><a href="#">最新</a></li>
+            <li param="hot"><a href="#">最热</a></li>
           </ul>
         </div>
       </div>
@@ -55,23 +55,30 @@
     </div>
   </div>
 
-  <div class="vedio-course-content wrapper">
-    <% @courses.each do |course|%>
-      <div class='single-vedio-content'>
-        <div class="vedio-content">
-          <div class="image-wrapper">
-            <%= link_to image_tag(course.attachment.content.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.attachment%>
-          </div>
-          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
-          <p class="description">
-            <span class="pull-left section"><%= link_to truncate(course.description.to_s,length: 15), show_courses_path(course.number) %></span>
-            <span class="pull-right">
-              <span class="glyphicon glyphicon-star"></span>
-              <%= course.get_likes(vote_scope: "collect").size %>人收藏
-            </span>
-          </p>
-        </div>
-      </div>
-    <%end%>
+  <div id="courseList" class="vedio-course-content wrapper">
+    <%= render @courses %>
   </div>
 </div>
+
+<%= link_to "", "#", id: "ajaxIndex", style: "display: none;", remote: true, format: :js %>
+<script type="text/javascript">
+  $('.serach-content ul a').click(function (e) {
+    e.preventDefault();
+    $(this).tab('show');
+
+    var url = "<%= courses_path %>";
+    url += "?"
+    $('.serach-content ul').find(".active").each(function(index){
+      var param = $(this).attr("param");
+      if(index == 0){
+        url = url + "academy_id=" +param
+      }else if(index == 1){
+        url = url + "&scope=" + param
+      }else if(index == 2){
+        url = url + "&type=" + param
+      }
+    });
+    $("#ajaxIndex").attr("href", url);
+    $("#ajaxIndex").click();
+  })
+</script>
