--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -36,7 +36,7 @@ body.courses__index {
           padding: 5px 25px;
         }
         li.active a {
-          background-color: #ea1c25;
+          background-color: #6499d3;
           padding: 5px 25px;
           color: #fff;
         }
