--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,14 +31,14 @@
         <div class="col-sm-11">
           <ul class="nav nav-pills serach-course">
             <li param="" class="active"><a href="#">全部</a></li>
-            <li param="2" ><a href="#">市级</a></li>
-            <li param="1"><a href="#">校级</a></li>
+            <li param="1" ><a href="#">市级</a></li>
+            <li param="2"><a href="#">校级</a></li>
           </ul>
         </div>
       </div>
       <!-- 、、、、、、、、、、、、、、、、类别。。。。。。。。。。。。。。。。。 -->
       <hr>
-      <!-- 、、、、、、、、、、、、、、、、其他。。。。。。。。。。。。。。。。。 -->
+      <!-- 、、、、、、、、、、、、、、、git、其他。。。。。。。。。。。。。。。。。 -->
       <div class="row serach-content">
         <div class="col-sm-1 text-right serach-name">
           <span>其他：</span>
