--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -108,9 +108,9 @@ body.home__index, body.teachers__index{
 	}
 	.tips-bg {
 		width: 100%;
-		height: 275px;
-		margin-top: 48px;
-		background: image-url("tips-bg.png") no-repeat 0 0;
+		height: 178px;
+		margin: 20px 0 10px 0;
+		background: image-url("progress.png") no-repeat 0 0;
 	}
 	.panel-bg {
 		font-size: 18px;
