--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,20 +45,18 @@
   	<!-- <span class="pull-right"><%= link_to "更多", "#", class: "more" %></span> -->
   </section>
   <div class="col-sm-12 col-xs-12 col-md-12">
-    <div class="col-sm-6">
-      <span  class="btn btn-default btn-lg btn-block border-yellow pull-left">教学过程与企业用人要求对接</span>
+    <div class="tips-bg"></div>
+    <div class="col-sm-3 text-center text-left">
+      <span style="margin-left: -66px">教学过程与企业用人要求对接</span>
     </div>
-    <div class="col-sm-6">
-      <span  class="btn btn-default btn-lg btn-block border-blue pull-right">课程内容与职业标准对接</span>
+    <div class="col-sm-3 text-center">
+      <span>课程内容与职业标准对接</span>
     </div>
-  </div>
-  <div class="tips-bg"></div>
-  <div class="col-sm-12 col-xs-12 col-md-12">
-    <div class="col-sm-6">
-      <span  class="btn btn-default btn-lg btn-block border-red pull-left">为学生提供企业环境和开发项目</span>
+    <div class="col-sm-3 text-center">
+      <span>为学生提供企业环境和开发项目</span>
     </div>
-    <div class="col-sm-6">
-      <span  class="btn btn-default btn-lg btn-block border-green pull-right">引入项目教学法，以任务驱动为载体做教学设计</span>
+    <div class="col-sm-3 text-center pull-right">
+      <span>引入项目教学法，以任务驱动为载体做教学设计</span>
     </div>
   </div>
   <section class="common-title">
@@ -124,7 +122,7 @@
   </div>
   <div class="col-sm-12 col-xs-12 col-md-12">
     <div class="col-sm-6 col-xs-6 col-md-6 col-sm-offset-3 margin-tb">
-      <%= link_to "开始学习", courses_path, class: "btn btn-lg btn-primary center-block"%>
+      <%= link_to "开始学习", "", class: "btn btn-lg btn-primary center-block"%>
     </div>
   </div>
 </div>
