--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="col-sm-4">
       <% Grade.all.each do |grade| %>
         <%= check_box_tag("teacher[grade_ids][]", grade.id, grade.id.in?(@teacher.grades.collect(&:id)))%>
-        <%= grade.name%>
+        (<%= grade.try(:specialty).try(:name) %>)<%= grade.name%>
       <%end%>
     </div>
   </div>
