--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -95,98 +95,9 @@
     </ul>
     <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
   </div>
-  <div class="category-list" id="category-list">
-    <a href="javascript:void(0)" class="index public-common-style">首页</a>
-    <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
-    <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
-    <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
-    <a href="javascript:void(0)" class="condition public-common-style">实践条件</a>
-    <a href="javascript:void(0)" class="method public-common-style">教学方法</a>
-    <a href="javascript:void(0)" class="content public-common-style">教学内容</a>
-    <a href="javascript:void(0)" class="resource public-common-style">教学资源</a>
-    <a href="javascript:void(0)" class="effect public-common-style">教学效果</a>
-    <a href="javascript:void(0)" class="policy public-common-style">特色与政策</a>
-  </div>
-  <div class="category-list-content">
-    <div class="text-content">
-      <%= render partial:"/course_info/course_home", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_data" , locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_setup", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_team", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_condition", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_method", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_content", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_resource", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_effect", locals: {course: @course} %>
-    </div>
-    <div class="text-content">
-      <%= render partial:"/course_info/course_policy", locals: {course: @course} %>
-    </div>
-  </div>
-  <div class="fast-entry">
-    <div class="fast-entry-links">
-      <a href="javascript:void(0)" class="btn btn-default">教学内容</a>
-      &nbsp;&nbsp;
-      <a href="javascript:void(0)" class="btn btn-default">教学方法</a>
-      &nbsp;&nbsp;
-      <a href="javascript:void(0)" class="btn btn-default">实践条件</a>
-      &nbsp;&nbsp;
-      <a href="javascript:void(0)" class="btn btn-default">教学效果</a>
-      &nbsp;&nbsp;
-      <a href="javascript:void(0)" class="btn btn-default">申报材料</a>
-    </div>
-    <div class="fast-entry-content">
-      <div class="entry-content">
-        <%= render partial: "/course_info/teach_content"%>
-      </div>
-      <div class="entry-content">
-        <%= render partial: "/course_info/teach_method"%>
-      </div>
-      <div class="entry-content">
-        <%= render partial: "/course_info/teach_condition"%>
-      </div>
-      <div class="entry-content">
-        <%= render partial: "/course_info/teach_effect"%>
-      </div>
-      <div class="entry-content">
-        <%= render partial:"/course_info/teach_data" %>
-      </div>
-    </div>
-  </div>
+  <% if @course.id == 1 %>
+    <%= render "courses/1/main" %>
+  <% elsif  @course.id == 2 %>
+    <%= render partial: "courses/2/main" %>
+  <% end %>
 </div>
-
-<!-- <div class="wrapper">
-  <div class="col-sm-12 col-md-12">
-    <div class="col-sm-4 col-md-4 pull-left">
-      <%= image_tag("vedio-bg.png")%>
-    </div>
-    <div class="col-sm-8 col-md-8 pull-right">
-      <h1><%= @course.name%></h1>
-      <p><%= @course.description%></p>
-    </div>
-  </div>
-</div>
-
-<%- @sub_courses.each do |sub_course|%>
-  <p>
-  <%= sub_course.name%>
-  <%= sub_course.content%>
-  <%= link_to "测试", new_exam_path(sub_course_id: sub_course.id)%>
-  </p>
-<%end%> -->
