--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -92,7 +92,7 @@ body.courses__index {
             font-size: normal;
           }
           a {
-            color: #5d5d5d;
+            color: #fff;
           }
         }
         .glyphicon-star {
