--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -122,8 +122,14 @@ body.home__index, body.teachers__index{
 		height: 300px;
 		font-size: 16px;
 		color: #373737;
+		position: relative;
 		background: image-url("star-course-bg.png") no-repeat 0 0;
 		background-size: 100% 100%;
+	}
+	.course-description {
+		position: absolute;
+    top: 186px;
+    color: #fff;
 	}
 	.course-center {
 		height: 230px;
@@ -222,19 +228,21 @@ body.home__index, body.teachers__index{
 	.star-course {
 		a img {
 			width: 100%;
-			height: 160px;
+			height: 225px;
 			padding: 12px 0;
 			border: 0 none;
 		}
     .description {
 			height: 26px;
 			line-height: 26px;
+			background: #333;
+			padding: 0 5px;
 			overflow: hidden;
 			label {
 				font-size: normal;
 			}
 			a {
-				color: #5d5d5d;
+				color: #fff;
 			}
 		}
 	}
