--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :script do %>
-  <%#= javascript_include_tag "slider.min", "_page_index", 'data-turbolinks-track' => false %>
+  <%= javascript_include_tag "slider.min", "_page_index", 'data-turbolinks-track' => false %>
 <%end%>
 
 <%= content_for :lunbo do %>
@@ -63,37 +63,13 @@
     <span class="pull-left">教师风采</span>
     <!-- <span class="pull-right"><%= link_to "更多", "#", class: "more" %></span> -->
   </section>
-  <div class="col-sm-12 col-xs-12 col-md-12">
-    <div class="col-sm-12 col-xs-12 col-md-12">
-      <div class="list-images">
-        <% @teachers.each_with_index do |teacher, index|%>
-          <% if index%5 == 0 %>
-            <%= link_to show_teachers_path(teacher.number), class: 'large' do %>
-              <%= image_tag(teacher.image.avatar.url(:t_220_220)) if teacher.image %>
-              <div class="mask"><p><%= teacher.name %></p></div>
-            <% end %>
-          <% else %>
-              <% if index%5 == 1 %>
-                <div class="small-div">
-              <% end %>
-              <% if index%5 == 1 ||  index%5 == 3%>
-                <%= link_to show_teachers_path(teacher.number), class: 'little pull-left' do %>
-                  <%= image_tag(teacher.image.avatar.url(:t_110_110), alt: teacher.name, title: teacher.final_degree)  if teacher.image %>
-                  <div class="sm-mask"><%= teacher.name %></div>
-                <% end %>
-              <% else %>
-                <%= link_to show_teachers_path(teacher.number), class: 'little' do %>
-                  <%= image_tag(teacher.image.avatar.url(:t_110_110), alt: teacher.name, title: teacher.name)  if teacher.image %>
-                  <div class="sm-mask"><%= teacher.name %></div>
-                <% end %>
-              <% end %>
-              <% if index%5 == 4%>
-                </div>
-              <% end %>
-          <% end %>
-        <% end %>
+  <div class="info-teachers-content wrapper">
+    <% @teachers.each do |teacher|%>
+      <div class="teacher-content">
+        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number) if teacher.image %>
+        <p><%= teacher.name %>(<%= teacher.final_degree%>)</p>
       </div>
-    </div>
+    <%end%>
   </div>
   <section class="common-title">
     <span class="pull-left">明星课程</span>
@@ -106,10 +82,9 @@
           <div class="col-sm-12">
             <%= link_to image_tag(course.attachment.content.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.attachment%>
           </div>
-          <div class="col-sm-12">
-            <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <div class="col-sm-12 course-description">
             <p class="description">
-              <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
+              <span class="pull-left section"><%= link_to course.name, show_courses_path(course.number) %></span>
               <span class="pull-right">
                 <span class="glyphicon glyphicon-star"></span>
                 <%= course.get_likes(vote_scope: "collect").size %>人收藏
