--- a/app/views/teachers/show_score.html.erb
+++ b/app/views/teachers/show_score.html.erb
@@ -7,7 +7,7 @@
   <div class="teacher-wrapper show-score">
   	<div class="show-score-title">
   	  <a href="javascript:void(0)" class="btn btn-primary">教师查阅</a>
-      <div class="main-title">网络设备维护基础（一）测试</div>
+      <div class="main-title"><%= @course.name %>测试</div>
   	</div>
 	
 	<div id="mutilGradepicture" class="mutil-grade-picture">
