--- a/app/views/courses/2/_main.html.erb
+++ b/app/views/courses/2/_main.html.erb
@@ -1,5 +1,5 @@
 <div class="category-list" id="category-list">
-  <a href="javascript:void(0)" class="index public-common-style">首页</a>
+  <a href="javascript:void(0)" class="index public-active-style active public-common-style">首页</a>
   <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
   <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
   <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
