--- a/app/views/discusses/index.html.erb
+++ b/app/views/discusses/index.html.erb
@@ -50,7 +50,7 @@
               <span class="text-muted">[最新回答]</span>
                 <span>乌尔奇奥拉:<span>
                 <span class="text-muted">
-                  发大水发的说法平时都符合士大夫的萨芬；的设计费；阿萨德解放军撒打开了积分的撒发生的；发酵的就发生；打飞机；按甲方的；就分配无法；安静的烦恼成都；萨芬；啥地方了；的萨菲罗斯
+                  最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答最新回答
                 </span>
             <% end %>
           </p>
