--- a/app/views/courses/2/_main.html.erb
+++ b/app/views/courses/2/_main.html.erb
@@ -11,9 +11,9 @@
   <a href="javascript:void(0)" class="policy public-common-style">特色与政策</a>
 </div>
 <div class="category-list-content">
-  <!-- <div class="text-content">
-    <%#= render partial: "courses/2/course_home", locals: {course: @course} %>
-  </div> -->
+  <div class="text-content">
+    <%= render partial: "courses/2/course_home", locals: {course: @course} %>
+  </div>
   <div class="text-content">
     <%= render partial: "courses/2/course_data" , locals: {course: @course} %>
   </div>
