--- a/app/views/courses/2/_course_home.html.erb
+++ b/app/views/courses/2/_course_home.html.erb
@@ -2,7 +2,7 @@
 <br><br>
 <div class="container-fluid">
   <dl>
-        <dd>本课程以国家职业资格Java高级程序员的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验。</dd>
+        <dd>本课程以国家职业资格网络设备工程师的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验。</dd>
   </dl>
 </div>
 <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
