--- a/app/views/teachers/my_account.html.erb
+++ b/app/views/teachers/my_account.html.erb
@@ -26,6 +26,9 @@
 		  		<%= f.input :avatar, as: :file, label: "我的头像" %>
           <%= f.association :academy, collection: [['请选择院系','']] + Academy.all.pluck(:name,:id), 
           as: :select, include_blank: false, label: "所属学院" %>
+          <%= f.input :email, label: "电子邮箱" %>
+          <%= f.input :birthday, label: "出生年月" %>
+          <%= f.input :fax, label: "传真号码" %>
           <%= f.input :tec_position, label: "专业技术职位" %>
           <%= f.input :qualification, label: "资格证书" %>
           <%= f.input :final_education,label: "最终学历" %>
