--- a/app/views/courses/2/_course_data.html.erb
+++ b/app/views/courses/2/_course_data.html.erb
@@ -13,7 +13,8 @@
 <ul class="container-fluid">
   <div class="col-sm-12"><dd class="col-sm-12">申报表</dd></div>
   <li class="col-sm-12">
-    <a pef= "#" class="col-sm-10">精品课程申报表</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <%= link_to "/docs/jingpinkechengshenqing.doc", class: "btn btn-primary" do %>
+      <span class="glyphicon glyphicon-download-alt"> 点击下载精品课程申请表 </span>
+    <% end %>
   </li>
 </ul>
