--- a/app/views/courses/2/_course_data.html.erb
+++ b/app/views/courses/2/_course_data.html.erb
@@ -1,20 +1,12 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
 <br><br>
 <ul class="container-fluid">
-  <div class="col-sm-12"><dd class="col-sm-12">教学录像</dd></div>
-  <% (0..3).each do |index|%>
   <li class="col-sm-12">
-    <a href= "#" class="col-sm-10">jsp登录功能的实现</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  <% end %>
-</ul>
-<br><br>
-<ul class="container-fluid">
-  <div class="col-sm-12"><dd class="col-sm-12">申报表</dd></div>
-  <li class="col-sm-12">
-    <%= link_to "/docs/jingpinkechengshenqing.doc", class: "btn btn-primary" do %>
-      <span class="glyphicon glyphicon-download-alt"> 点击下载精品课程申请表 </span>
-    <% end %>
+    <div class="col-sm-2">申报表</div>
+    <div class="col-sm-6">
+      <%= link_to "/docs/jingpinkechengshenqing.doc", class: "btn btn-primary" do %>
+        <span class="glyphicon glyphicon-download-alt"> 点击下载精品课程申请表 </span>
+      <% end %>
+    </div>
   </li>
 </ul>
