teacher imgae change

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -10,7 +10,7 @@
 <div class="main-content">
 	<div id="teacher-info" class="wrapper">
 		<div class="teacher-img">
-			<%= image_tag(@teacher.image.avatar.url(:t_280x370))%>
+			<%= image_tag(@teacher.image.avatar.url(:t_280_370))%>
 		</div>
 		<div class="teacher-data plus">
 		  <div class="title-content">
