--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -17,7 +17,7 @@
   <ul class="teachers-list">
     <% @teachers.each do |teacher|%>
       <li>
-        <%= link_to image_tag(teacher.image.avatar.url(:t_170x220)), show_teachers_path(teacher.number) if teacher.image%>
+        <%= link_to image_tag(teacher.image.avatar.url(:t_170_220)), show_teachers_path(teacher.number) if teacher.image%>
         <p><%= teacher.name %>(<%= teacher.final_degree %>)</p>
       </li>
     <%end%>
