--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -37,7 +37,7 @@
                       最后学习：32分钟
                     </small>
                   </h4><br>
-                  <p><%= course.description %></p>
+                  <p><%= truncate(course.description, length: 180) %></p>
                 </div>
               </div>
             </div>
