--- a/app/views/courses/2/_course_content.html.erb
+++ b/app/views/courses/2/_course_content.html.erb
@@ -1,8 +1,8 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学内容的选取</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>教学内容的组织与安排</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的选取</strong></a>
+<a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的组织与安排</strong></a>
 <br><br>
 <!-- 教学内容的针对性和适用性 -->
-<div class="container-fluid">
+<div class="container-fluid course-content-div">
 	<dl>
 	  <dt>1.1 教学内容的选取</dt>
 	  <dd>该课程引入项目教学法、任务驱动教学法、场景模拟教学法。该课程以企业真实的项目为导向，把企业项目序化成适合教学的教学项目，根据子项目的性质，将课程内容精心设计为若干个任务，其中包括总任务、模块任务、子任务等不同大小的任务。</dd>
@@ -17,7 +17,7 @@
 
 <!-- 教学内容的组织与安排 -->
 
-<div class="container-fluid">
+<div class="container-fluid course-content-div" style="display: none;">
 	<dl>
 	  <dt>2.1教学内容的组织</dt>
 	  <dd>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现移动通信各各的具体工作内容。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在项目组中的共同讨论，促使学员进入具有强烈现场感的情景与过程，养成正确的工作习惯，良好的行为规范和优秀的职业作风。</dd>
