--- a/app/views/courses/2/_course_effect.html.erb
+++ b/app/views/courses/2/_course_effect.html.erb
@@ -1,6 +1,6 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>专家评价</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>督导评价</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>学生评价</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-effect-nav"><strong>专家评价</strong></a>
+<!-- <a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>督导评价</strong></a> -->
+<!-- <a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>学生评价</strong></a> -->
 <br><br>
 <dl>
   <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校外专家评价</p>
