--- a/app/views/courses/2/_course_method.html.erb
+++ b/app/views/courses/2/_course_method.html.erb
@@ -1,10 +1,10 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学模式的设计与创新</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>现代教学技术手段的应用</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>多种教学方法的运用</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>网络教学资源和硬件环境</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-method-nav"><strong>教学模式的设计与创新</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>现代教学技术手段的应用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>多种教学方法的运用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>网络教学资源和硬件环境</strong></a>
 <br><br>
 <!-- 教学模式的设计与创新 -->
-<div class="contrainer-fluid">
+<div class="contrainer-fluid course-content-method-div">
 	<dl>
 		<dt>1.教学模式的设计与创新 </dt>
 		<dt>1.1 实施“面向工作岗位、基于工作过程、融入职业标准”的校企协同教学模式</dt>
@@ -20,7 +20,7 @@
 </div>
 
 <!-- 多种教学方法的运用 -->
-<div class="contrainer-fluid">
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
   <dl>
   	<dd>在教学过程中,以行为导向为基本教学方法，根据项目开发基本情况，灵活应用多种教学方法，教学过程注重工学结合和教学做一体化。</dd>
   	<dt>2.1 项目导向+任务驱动教学法</dt>
@@ -35,7 +35,7 @@
 </div>
 
 <!-- 现代信息技术手段的应用 -->
-<div class="contrainer-fluid">
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
 	<dl>
 	  <dt>3.1广泛采用多媒体技术</dt>
 	  <dd>多媒体设备充足，完全满足教学需要采用投影、幻灯片、白板、屏幕广播等方式教学，把课程集成为声音、图像为一体的教学资源，将抽象理论、复杂操作过程以图片、动画等形式生动化、形象化，增强教学感染力，使教学效果更加明显。</dd>
@@ -51,7 +51,7 @@
 </div>
 
 <!-- 网络教学资源和硬件环境 -->
-<div class="contrainer-fluid">
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
 	<dl>
 	  <dt>4.1 校园网网络硬件环境有力支撑教学</dt>
 	  <dd>校园网主干为千兆以太网、到桌面为百兆，拥有CERNET和电信两条出口和Internet的联接，如下图所示，提供了一个功能齐全、运行高效、使用灵活、易于扩展的校园网系统，保证了学生通过课程网站在线学习。</dd>
