--- a/app/views/courses/2/_course_resource.html.erb
+++ b/app/views/courses/2/_course_resource.html.erb
@@ -4,20 +4,16 @@
 <ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">教学大纲</dt></div>
   <li class="col-sm-12">
-    <a href= "#" class="col-sm-10">《Java web开发设计》教学大纲</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href = "/docs/2/jiaoxuedagang.doc" class="col-sm-10">《无线网络设备维护》教学大纲</a>
+    <a href = "/docs/2/jiaoxuedagang.doc" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;下载</a>
   </li>
-  <li class="col-sm-12">
-    <a href= "#" class="col-sm-10">学习细目表</a>
-    <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
-  </li>
-  </ul>
-  <br><br>
+</ul>
+<br><br>
 
-  <ul class="container-fluid">
+<ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">授课计划与进度</dt></div>
-  </ul>
-  <br><br>
+</ul>
+<br><br>
 
  <ul class="container-fluid">
   <div class="col-sm-12"><dt class="col-sm-12">电子教案</dt></div>
