--- a/app/views/courses/2/_course_setup.html.erb
+++ b/app/views/courses/2/_course_setup.html.erb
@@ -1,7 +1,7 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>课程定位</strong></a>
-<a href="javascript:void(0)" class="btn"><strong>课程设计</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程定位</strong></a>
+<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程设计</strong></a>
 <br><br>
-<div class="container-fluid">
+<div class="container-fluid course-content-step-div">
 	<dl>
 		<dt>1．课程性质与作用</dt>
 		<dd>《无线网络设备维护》是通信工程专业的重点核心课程，通过本课程的学习，学生能够学习到移动通信网络建设工程必备的知识和技能：3G、4G移动通信网络架构，系统运行机制，软硬件平台，LMT基站维护工具使用，OMT远程网络管理工具使用，OSP设备底层维护工具使用，ATP信令流程跟踪，Solaris系统的安装操作，Oracle在移动通信中的实用技能，IUB，SI/X2，Ir，Itf-B，Tb接口建立，基站的升级和割接等，基本具备移动通信初级设备维护工程师的能力。</dd>
