--- a/app/views/common/_nav.html.erb
+++ b/app/views/common/_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <ul class="nav navbar-nav">
+  <ul class="nav nav-pills nav-header">
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
