sub course edit

--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -66,6 +66,11 @@ footer {
 	width: 100%;
 	background: #fff;
 }
+
+.glyphicon-star {
+	color: orange;
+}
+
 body.devise__sessions__new,body.devise__registrations__new,body.devise__registrations__create { 
 	.login-bg {
 		position: relative;
