--- a/app/views/discusses/index.html.erb
+++ b/app/views/discusses/index.html.erb
@@ -88,7 +88,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label">标题</label>
             <div class="col-sm-9">
-              <input type="email" class="form-control">
+              <input type="text" class="form-control">
             </div>
           </div>
           <div class="form-group">
