--- a/app/views/admin/teachers/_form.html.erb
+++ b/app/views/admin/teachers/_form.html.erb
@@ -14,6 +14,14 @@
       <%end%>
     </div>
   </div>
+  <% if @teacher.image.present? %>
+    <div class="form-group">
+      <%= label_tag :image, '已传头像', class: 'col-sm-2 control-label' %>
+      <div class="col-sm-4">
+        <%= image_tag @teacher.image.avatar.url %>
+      </div>
+    </div>
+  <% end %>
   <div class="form-group">
     <%= f.label :image, '头像', class: 'col-sm-2 control-label' %>
     <div class="col-sm-4">
@@ -118,3 +126,9 @@
     </div>
   </div>
 <%end%>
+
+<script type="text/javascript">
+  $(function(){
+    $("#teacher_image").fileinput();
+  });
+</script>
